--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "http-status-codes": "^2.2.0",
     "mongodb": "4.12",
     "mongoose": "^6.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
